force-app/main/default/objects/Webinar__kav/fields/Thumbnail_Rich__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Rich__c</fullName>
    <label>Thumbnail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>