force-app/main/default/objects/Webinar__kav/fields/Video_link__c.field-meta.xml
<CustomField>
    <fullName>Video_link__c</fullName>
    <label>Video link</label>
    <type>Url</type>
</CustomField>