force-app/main/default/objects/Webinar__kav/fields/Webinar__c.field-meta.xml
<CustomField>
    <fullName>Webinar__c</fullName>
    <description>Used to embed the video</description>
    <label>Webinar</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>